--- a/germline-variants/germline-validation.ipynb
+++ b/germline-variants/germline-validation.ipynb
@@ -167,7 +167,8 @@
     "\n",
     "# required cols from data\n",
     "req_cols = ['Type','TRUTH.TOTAL','TRUTH.TP','TRUTH.FN','QUERY.TOTAL','QUERY.FP','QUERY.UNK','METRIC.Recall', 'METRIC.Precision']\n",
-    "                            \n",
+    "\n",
+    "# Take only Filter PASS rows\n",
     "haplotype_data = haplotype_csv.loc[[1,3], req_cols]\n",
     "freebayes_data = freebayes_csv.loc[[1,3], req_cols]\n",
     "strelka_data = strelka_csv.loc[[1,3], req_cols]\n",
