--- a/germline-variants/germline-validation.ipynb
+++ b/germline-variants/germline-validation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "3     111657       0.914110          0.949942  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,9 +169,9 @@
     "req_cols = ['Type','TRUTH.TOTAL','TRUTH.TP','TRUTH.FN','QUERY.TOTAL','QUERY.FP','QUERY.UNK','METRIC.Recall', 'METRIC.Precision']\n",
     "\n",
     "# Take only Filter PASS rows\n",
-    "haplotype_data = haplotype_csv.loc[[1,3], req_cols]\n",
-    "freebayes_data = freebayes_csv.loc[[1,3], req_cols]\n",
-    "strelka_data = strelka_csv.loc[[1,3], req_cols]\n",
+    "haplotype_data = haplotype_csv[haplotype_csv.Filter == 'PASS'][req_cols]\n",
+    "freebayes_data = freebayes_csv[freebayes_csv.Filter == 'PASS'][req_cols]\n",
+    "strelka_data = strelka_csv[strelka_csv.Filter == 'PASS'][req_cols]\n",
     "\n",
     "# add callers column\n",
     "haplotype_data.insert(loc=0, column='Callers', value='Haplotype') \n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
     "sns_plot = sns.relplot(data=all_data, x=\"METRIC.Recall\", y=\"METRIC.Precision\",hue='Type', style='Callers', \n",
     "                markers=markers, height=7, s=150)\n",
     "plt.title(\"Recall vs Precision - Germline variants\")\n",
-    "plt.savefig('germline_variants.png', bbox_inches=\"tight\")"
+    "plt.savefig('scatter_plot.png', bbox_inches=\"tight\")"
    ]
   },
   {
