bamsimulator workflow updated

--- a/germline-variants/germline-validation.ipynb
+++ b/germline-variants/germline-validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "3     111657       0.914110          0.949942  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "11    Strelka    SNP  METRIC.Precision  0.949942"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,18 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f0614202860>"
+       "<Figure size 720x360 with 0 Axes>"
       ]
      },
-     "execution_count": 36,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -394,7 +393,9 @@
     }
    ],
    "source": [
-    "sns.catplot(data=melted_data, x='Callers', y='value', hue='Type', col='variable', kind='bar')"
+    "plt.figure(figsize=(10,5))\n",
+    "sns.catplot(data=melted_data, x='Callers', y='value', hue='Type', col='variable', kind='bar')\n",
+    "plt.savefig('bar_plot.png', bbox_inches=\"tight\")"
    ]
   },
   {
